Tue Sep  1 18:46:31 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * include/makeinclude/platform_sunos5_sunc++.GNU:

          Added new flag to control annotation support for Sun CC 5.10. By
          default, annotation support will be disabled (consistent with
          previous Sun CC releases). Fixes Bugzilla #3733.

Tue Sep  1 17:39:01 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * ace/config-sunos5.5.h:

          Corrected _POSIX_PTHREAD_SEMANTICS behavior on SunOS hosts. This
          was causing a failure in ACE_OS::sched_params when a non-zero
          quantum is specified on Solaris 9. Fixes Bugzilla #3718.

Sat Aug 29 22:41:33 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/Event_Handler.h: Edited doc for resume_handler() to note that
          it also works with ACE_Dev_Poll_Reactor.

Thu Aug 27 20:53:18 UTC 2009  Steve Huston  <shuston@riverace.com>

        * tests/Thread_Attrs_Test.cpp:
        * tests/tests.mpc:
        * tests/run_test.lst:
        * tests/Makefile.am:
          New test to verify that spawning a thread with a particular stack
          size actually gives the desired stack size to the new thread. This
          test only does anything real on Linux at this point. It could be
          extended to other platforms and could be extended to test
          other attributes of the spawned thread as well.

Thu Aug 27 20:27:52 UTC 2009  Steve Huston  <shuston@riverace.com>

        * bin/MakeProjectCreator/templates/gnu.mpd: When building requirement-
          checking and LDFLAGS for building binaries, take ARCH builds into
          account to properly locate libs.

        * include/makeinclude/wrapper_macros.GNU: Don't do the ARCH adjusting
          until after including platform_macros.GNU where ARCH would be
          defined.

        * include/makeinclude/rules.lib.GNU: Fix building, installing, and
          cleaning up libs built in an ARCH build.
