@@ -24,13 +24,13 @@ run_main (int, ACE_TCHAR *[])
 
   int ret = 0;
 
-#if defined(ACE_WIN32)
+#if defined(ACE_WIN32) && !defined (ACE_LACKS_MMAP)
   ACE_HANDLE  handle = ACE_INVALID_HANDLE;
   ACE_TString name(ACE_TEXT ("Bug3500"));
 
   void *mmap =
     ACE_OS::mmap(0,                   // addr
-                 28,                 // len
+                 28,                  // len
                  PAGE_READWRITE,      // prot
                  MAP_SHARED,          // flags
                  ACE_INVALID_HANDLE,  // file_handle
@@ -46,9 +46,11 @@ run_main (int, ACE_TCHAR *[])
 #endif
 
   if (0 != ret)
-  {
-    ACE_ERROR ((LM_ERROR, ACE_TEXT ("ACE_OS::mmap() failed\n")));
-  }
+    {
+      ACE_ERROR ((LM_ERROR,
+                  ACE_TEXT ("ACE_OS::mmap() %p\n"),
+                  ACE_TEXT ("failed")));
+    }
 
   ACE_END_TEST;
 
