@@ -53,7 +53,7 @@ Bug_3532_Regression_Test
 Bug_3541_Regression_Test
 Bug_3505_Regression_Test
 Bug_3673_Regression_Test
-Bug_3709_Regression_Test
+Bug_3709_Regression_Test: !LabVIEW_RT
 Bug_3710_Regression_Test
 CDR_Array_Test: !ACE_FOR_TAO
 CDR_File_Test: !ACE_FOR_TAO
